--- a/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
@@ -717,7 +717,7 @@ spec:
                                       x-kubernetes-list-type: map
                                   type: object
                                 requestMirror:
-                                  description: |+
+                                  description: |-
                                     RequestMirror defines a schema for a filter that mirrors requests.
                                     Requests are sent to the specified destination, but responses from
                                     that destination are ignored.
@@ -729,8 +729,6 @@ spec:
 
 
                                     Support: Extended
-
-
                                   properties:
                                     backendRef:
                                       description: |-
@@ -882,9 +880,6 @@ spec:
                                   required:
                                   - backendRef
                                   type: object
-                                  x-kubernetes-validations:
-                                  - message: testing testing testing
-                                    rule: "false"
                                 requestRedirect:
                                   description: |-
                                     RequestRedirect defines a schema for a filter that responds to the
@@ -1775,7 +1770,7 @@ spec:
                                 x-kubernetes-list-type: map
                             type: object
                           requestMirror:
-                            description: |+
+                            description: |-
                               RequestMirror defines a schema for a filter that mirrors requests.
                               Requests are sent to the specified destination, but responses from
                               that destination are ignored.
@@ -1787,8 +1782,6 @@ spec:
 
 
                               Support: Extended
-
-
                             properties:
                               backendRef:
                                 description: |-
@@ -1940,9 +1933,6 @@ spec:
                             required:
                             - backendRef
                             type: object
-                            x-kubernetes-validations:
-                            - message: testing testing testing
-                              rule: "false"
                           requestRedirect:
                             description: |-
                               RequestRedirect defines a schema for a filter that responds to the
@@ -4074,7 +4064,7 @@ spec:
                                       x-kubernetes-list-type: map
                                   type: object
                                 requestMirror:
-                                  description: |+
+                                  description: |-
                                     RequestMirror defines a schema for a filter that mirrors requests.
                                     Requests are sent to the specified destination, but responses from
                                     that destination are ignored.
@@ -4086,8 +4076,6 @@ spec:
 
 
                                     Support: Extended
-
-
                                   properties:
                                     backendRef:
                                       description: |-
@@ -4239,9 +4227,6 @@ spec:
                                   required:
                                   - backendRef
                                   type: object
-                                  x-kubernetes-validations:
-                                  - message: testing testing testing
-                                    rule: "false"
                                 requestRedirect:
                                   description: |-
                                     RequestRedirect defines a schema for a filter that responds to the
@@ -5132,7 +5117,7 @@ spec:
                                 x-kubernetes-list-type: map
                             type: object
                           requestMirror:
-                            description: |+
+                            description: |-
                               RequestMirror defines a schema for a filter that mirrors requests.
                               Requests are sent to the specified destination, but responses from
                               that destination are ignored.
@@ -5144,8 +5129,6 @@ spec:
 
 
                               Support: Extended
-
-
                             properties:
                               backendRef:
                                 description: |-
@@ -5297,9 +5280,6 @@ spec:
                             required:
                             - backendRef
                             type: object
-                            x-kubernetes-validations:
-                            - message: testing testing testing
-                              rule: "false"
                           requestRedirect:
                             description: |-
                               RequestRedirect defines a schema for a filter that responds to the
