--- a/config/crd/standard/gateway.networking.k8s.io_httproutes.yaml
+++ b/config/crd/standard/gateway.networking.k8s.io_httproutes.yaml
@@ -688,7 +688,7 @@ spec:
                                       x-kubernetes-list-type: map
                                   type: object
                                 requestMirror:
-                                  description: |+
+                                  description: |-
                                     RequestMirror defines a schema for a filter that mirrors requests.
                                     Requests are sent to the specified destination, but responses from
                                     that destination are ignored.
@@ -700,8 +700,6 @@ spec:
 
 
                                     Support: Extended
-
-
                                   properties:
                                     backendRef:
                                       description: |-
@@ -1701,7 +1699,7 @@ spec:
                                 x-kubernetes-list-type: map
                             type: object
                           requestMirror:
-                            description: |+
+                            description: |-
                               RequestMirror defines a schema for a filter that mirrors requests.
                               Requests are sent to the specified destination, but responses from
                               that destination are ignored.
@@ -1713,8 +1711,6 @@ spec:
 
 
                               Support: Extended
-
-
                             properties:
                               backendRef:
                                 description: |-
@@ -3798,7 +3794,7 @@ spec:
                                       x-kubernetes-list-type: map
                                   type: object
                                 requestMirror:
-                                  description: |+
+                                  description: |-
                                     RequestMirror defines a schema for a filter that mirrors requests.
                                     Requests are sent to the specified destination, but responses from
                                     that destination are ignored.
@@ -3810,8 +3806,6 @@ spec:
 
 
                                     Support: Extended
-
-
                                   properties:
                                     backendRef:
                                       description: |-
@@ -4811,7 +4805,7 @@ spec:
                                 x-kubernetes-list-type: map
                             type: object
                           requestMirror:
-                            description: |+
+                            description: |-
                               RequestMirror defines a schema for a filter that mirrors requests.
                               Requests are sent to the specified destination, but responses from
                               that destination are ignored.
@@ -4823,8 +4817,6 @@ spec:
 
 
                               Support: Extended
-
-
                             properties:
                               backendRef:
                                 description: |-
